# GameOfLife

./: .gitignore  CMakeLists.txt  GameOfLifeController.cpp  GameOfLifeController.h  GameOfLifeModel.cpp  GameOfLifeModel.h  GridWidgetView.cpp  GridWidgetView.h  README.md  main.cpp  test_game_of_life.cpp
src/: GameOfLifeController.cpp  GridWidgetView.cpp  main.cpp
